<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="?attr/colorPrimaryVariant" >

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:gravity="center_horizontal"
                android:text="@string/registration"
                android:textAppearance="@style/text" />

            <View
                android:id="@+id/line_2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="42dp"
                android:background="@drawable/line_2" />

        </Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
	
	<Space
		android:layout_width="match_parent"
		android:layout_height="90dp" />

	<TextView
		android:id="@+id/textViewEmail"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="18dp"
		android:text="@string/email"
		android:textAppearance="@style/smallText" />
		
	<Space
		android:layout_width="match_parent"
		android:layout_height="8dp" />

	<EditText
		android:id="@+id/editTextEmail"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:layout_marginEnd="18dp"
		android:layout_marginStart="18dp"
		android:background="@drawable/rectangle"
		android:hint="@string/example"
		android:inputType="textEmailAddress"
		android:paddingEnd="20dp"
		android:paddingStart="18dp"
		android:textAppearance="@style/text"
		android:textColorHint="#AF9479"
		tools:ignore="Autofill" />
		
	<Space
		android:layout_width="match_parent"
		android:layout_height="24dp" />

	<TextView
		android:id="@+id/textViewPassword"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="18dp"
		android:text="@string/password"
		android:textAppearance="@style/smallText" />
		
	<Space
		android:layout_width="match_parent"
		android:layout_height="8dp" />

	<EditText
		android:id="@+id/editTextPassword"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:layout_marginEnd="18dp"
		android:layout_marginStart="18dp"
		android:background="@drawable/rectangle"
		android:hint="@string/asterisks"
		android:inputType="textPassword"
		android:paddingEnd="20dp"
		android:paddingStart="18dp"
		android:textAppearance="@style/text"
		android:textColorHint="#AF9479"
		tools:ignore="Autofill,DuplicateSpeakableTextCheck" />
		
	<Space
		android:layout_width="match_parent"
		android:layout_height="24dp" />

	<TextView
		android:id="@+id/textViewRepeatPassword"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="18dp"
		android:text="@string/repeatPassword"
		android:textAppearance="@style/smallText" />
		
	<Space
		android:layout_width="match_parent"
		android:layout_height="8dp" />

	<EditText
		android:id="@+id/editTextRepeatPassword"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:layout_marginEnd="18dp"
		android:layout_marginStart="18dp"
		android:background="@drawable/rectangle"
		android:hint="@string/asterisks"
		android:inputType="textPassword"
		android:paddingEnd="20dp"
		android:paddingStart="18dp"
		android:textAppearance="@style/text"
		android:textColorHint="#AF9479"
		tools:ignore="Autofill" />
		
	<Space
		android:layout_width="match_parent"
		android:layout_height="31dp" />

	<Button
		android:id="@+id/buttonRegistration"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:layout_marginEnd="18dp"
		android:layout_marginStart="19dp"
		android:background="@drawable/fill_rectangle"
		android:text="@string/registration"
		android:textAppearance="@style/button"
		android:theme="@style/button"
		tools:ignore="DuplicateSpeakableTextCheck" />

</LinearLayout>