<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="71dp"
    android:background="@drawable/rectangle_1"
    android:elevation="2dp" >

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="14dp"
        android:gravity="top"
        android:text="@string/espresso"
        android:textAppearance="@style/text"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="41dp"
        android:gravity="top"
        android:text="@string/twoHundredRur"
        android:textAppearance="@style/example_2"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/minusButton"
        android:layout_width="14dp"
        android:layout_height="2dp"
        android:layout_marginStart="269dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/minus_2" />

    <TextView
        android:id="@+id/textViewNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="296dp"
        android:layout_marginTop="27dp"
        android:gravity="top"
        android:text="@string/zero"
        android:textAppearance="@style/some_id_3" />

    <Button
        android:id="@+id/plusButton"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_marginStart="321dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/plus_2" />

</RelativeLayout>