<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="?attr/colorPrimaryVariant" >

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:gravity="center_horizontal"
                android:text="@string/yourOrder"
                android:textAppearance="@style/text" />

            <View
                android:id="@+id/line_2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="42dp"
                android:background="@drawable/line_2" />

        </Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
	
	<Space
		android:layout_width="match_parent"
		android:layout_height="15dp" />

	<ListView
		android:id="@android:id/list"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:layout_marginEnd="16dp"
		android:layout_marginStart="10dp"
		android:divider="@null"
		android:dividerHeight="6dp" />
		
	<Space
		android:layout_width="match_parent"
		android:layout_height="22dp" />

	<TextView
		android:id="@+id/textViewPleaseWait"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginEnd="13dp"
		android:layout_marginStart="13dp"
		android:gravity="center_horizontal"
		android:text="@string/pleaseWait"
		android:textAppearance="@style/largeText" />
		
	<Space
		android:layout_width="match_parent"
		android:layout_height="22dp" />

	<Button
		android:id="@+id/buttonPay"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:layout_marginEnd="18dp"
		android:layout_marginStart="19dp"
		android:background="@drawable/fill_rectangle"
		android:text="@string/pay"
		android:textAppearance="@style/button"
		android:theme="@style/button" />
				
	<Space
		android:layout_width="match_parent"
		android:layout_height="32dp" />

</LinearLayout>